# depfix

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  requirements.txt  requirements_updated.txt  start_web.py  test_requirements.txt  test_requirements_simple_script.txt
apps/cli/: main.py
apps/web/: main.py
core/: detect.py  models.py  parse_node.py  parse_python.py  resolve_python.py
docs/: CLAUDE.md  CLI_SPECS.md  MVP_PLAN.md
stand_alone_script/: requirements_updater.py
tests/: conftest.py  test_project_structure.py
tests/unit/: test_cli.py  test_detect.py  test_parse_python.py  test_resolve_python.py  test_web.py
